--- a/file-config.html
+++ b/file-config.html
@@ -92,8 +92,8 @@
           <div id="quickMenu" class="absolute right-0 mt-2 w-40 bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded shadow-lg hidden">
             <ul class="text-xs text-gray-700 dark:text-gray-300 divide-y dark:divide-gray-600">
 
-              <li><a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700">Student Portal</a></li>
-              <li><a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700">Logout</a></li>
+              <li><a href="https://zen-tech-student-portal.vercel.app/Syit" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700">Student Portal</a></li>
+              <li><a href="https://t-service-india.vercel.app/login.html" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700">Logout</a></li>
             </ul>
           </div>
         </div>
@@ -104,6 +104,42 @@
         <button id="themeToggle" aria-label="Toggle Theme" class="ml-2">
           <svg id="themeIcon" class="w-6 h-6 text-gray-600 dark:text-gray-300" fill="none" viewBox="0 0 24 24" stroke="currentColor"></svg>
         </button>
+
+        <!-- Avatar Button -->
+<div class="relative">
+  <button id="adminAvatarBtn" class="rounded-full overflow-hidden w-10 h-10 border-2 border-blue-400 dark:border-white focus:outline-none focus:ring-2 focus:ring-blue-500">
+    <img src="https://th.bing.com/th/id/R.b46dc67851da91c22947025216cfb36b?rik=fN3OqfXvAriq8A&riu=http%3a%2f%2fajcacollege.in%2fwp-content%2fuploads%2ficon.jpg&ehk=8RZwbIoWWBMgIzEe%2bhzgXUv98WC3w%2fVeP6gEICvVadQ%3d&risl=&pid=ImgRaw&r=0" alt="Admin Avatar" class="w-full h-full object-cover" />
+  </button>
+
+  <!-- Admin Info Popup -->
+  <div id="adminPopup" class="hidden absolute right-0 mt-2 w-72 bg-white dark:bg-gray-900 border border-gray-300 dark:border-gray-700 rounded-xl shadow-xl p-4 z-50 text-sm text-gray-800 dark:text-gray-200">
+    <h3 class="font-semibold text-lg mb-2 text-blue-600 dark:text-blue-300">T-SERVICE Admin Info</h3>
+    <ul class="space-y-1">
+      <li><strong>Tejas Shinde:</strong> Head Admin</li>
+      <li><strong>Ankita Rajput:</strong> Super Admin</li>
+      <li><strong>Sujal Telore:</strong> Manager</li>
+      <li><strong>Kritika Sonawane:</strong> Assistant Manager</li>
+      <li><strong>Anaya Shirke:</strong> Server Admin (SSA-1,2,3)</li>
+    </ul>
+  </div>
+</div>
+<script>
+  const adminBtn = document.getElementById("adminAvatarBtn");
+  const adminPopup = document.getElementById("adminPopup");
+
+  // Toggle popup on click
+  adminBtn.addEventListener("click", () => {
+    adminPopup.classList.toggle("hidden");
+  });
+
+  // Optional: Close popup when clicking outside
+  document.addEventListener("click", (e) => {
+    if (!adminBtn.contains(e.target) && !adminPopup.contains(e.target)) {
+      adminPopup.classList.add("hidden");
+    }
+  });
+</script>
+
       </div>
     </div>
 
@@ -111,7 +147,6 @@
   </header>
 
   
-
 
 <main class="pt-24 px-4 md:px-8 space-y-6">
 <!-- Main Dashboard Section -->
@@ -128,7 +163,7 @@
       <p class="text-sm text-gray-600 dark:text-gray-400">Add & manage notes.</p>
     </div>
 
-    <div onclick="showModule('Rhythm')" class="cursor-pointer bg-white dark:bg-gray-800 p-5 rounded-2xl shadow-lg hover:scale-105 transition-transform">
+    <div onclick="showModule('Notification')" class="cursor-pointer bg-white dark:bg-gray-800 p-5 rounded-2xl shadow-lg hover:scale-105 transition-transform">
       <div class="flex items-center mb-3">
         <i class="fas fa-bell text-yellow-600 dark:text-yellow-400 text-xl mr-2"></i>
         <h2 class="font-semibold text-lg text-gray-900 dark:text-gray-100">Notification/Alert</h2>
@@ -144,6 +179,29 @@
       <p class="text-sm text-gray-600 dark:text-gray-400">View top performers and rankings.</p>
     </div>
 
+  
+    <div onclick="showModule('Staff')" class="cursor-pointer bg-white dark:bg-gray-800 p-5 rounded-2xl shadow-lg hover:scale-105 transition-transform">
+      <div class="flex items-center mb-3">
+        <i class="fas fa-user-tie text-blue-600 dark:text-blue-400 text-xl mr-2"></i>
+        <h2 class="font-semibold text-lg text-gray-900 dark:text-gray-100">Staff Info</h2>
+      </div>
+      <p class="text-sm text-gray-600 dark:text-gray-400">View assigned managers.</p>
+    </div>
+
+    <div onclick="showModule('LoginCredentials')" class="cursor-pointer bg-white dark:bg-gray-800 p-5 rounded-2xl shadow-lg hover:scale-105 transition-transform">
+  <div class="flex items-center mb-3">
+    <i class="fas fa-key text-purple-600 dark:text-purple-400 text-xl mr-2"></i>
+    <h2 class="font-semibold text-lg text-gray-900 dark:text-gray-100">Login Credentials <strong>CONFEDENTIAL</strong></h2>
+  </div>
+  <p class="text-sm text-gray-600 dark:text-gray-400">Username and Password.</p>
+</div>
+
+
+
+    
+
+<!--
+
     <div onclick="showModule('PresentationImages')" class="cursor-pointer bg-white dark:bg-gray-800 p-5 rounded-2xl shadow-lg hover:scale-105 transition-transform">
       <div class="flex items-center mb-3">
         <i class="fas fa-images text-pink-600 dark:text-pink-400 text-xl mr-2"></i>
@@ -152,23 +210,14 @@
       <p class="text-sm text-gray-600 dark:text-gray-400">Upload activity images.</p>
     </div>
 
-    <div onclick="showModule('StaffInfo')" class="cursor-pointer bg-white dark:bg-gray-800 p-5 rounded-2xl shadow-lg hover:scale-105 transition-transform">
-      <div class="flex items-center mb-3">
-        <i class="fas fa-user-tie text-blue-600 dark:text-blue-400 text-xl mr-2"></i>
-        <h2 class="font-semibold text-lg text-gray-900 dark:text-gray-100">Staff Info</h2>
-      </div>
-      <p class="text-sm text-gray-600 dark:text-gray-400">View assigned managers.</p>
-    </div>
 
-
-      <div onclick="showModule('StaffInfo')" class="cursor-pointer bg-white dark:bg-gray-800 p-5 rounded-2xl shadow-lg hover:scale-105 transition-transform">
+    <div onclick="showModule('Ext_links')" class="cursor-pointer bg-white dark:bg-gray-800 p-5 rounded-2xl shadow-lg hover:scale-105 transition-transform">
       <div class="flex items-center mb-3">
         <i class="fas fa-user-tie text-blue-600 dark:text-blue-400 text-xl mr-2"></i>
         <h2 class="font-semibold text-lg text-gray-900 dark:text-gray-100">External Links</h2>
       </div>
       <p class="text-sm text-gray-600 dark:text-gray-400">Links which are not connected to LMS Software.</p>
     </div>
-
 
     <div onclick="showModule('MaintenanceMode')" class="cursor-pointer bg-yellow-100 dark:bg-yellow-700 p-5 rounded-2xl shadow-lg hover:scale-105 transition-transform">
       <div class="flex items-center mb-3">
@@ -186,6 +235,8 @@
       <p class="text-sm text-gray-700 dark:text-red-200">Temporarily suspend department accounts.</p>
     </div>
   </div>
+
+  -->
 </section>
 
 
@@ -373,10 +424,10 @@
   <h2 class="text-2xl md:text-3xl font-bold text-gray-900 dark:text-gray-100 mb-6">Leaderboard</h2>
 
  <form id="leaderboardForm" class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8">
-  <input id="studentName" type="text" required placeholder="Student Name"
+  <input id="studentName" type="text" required placeholder="Student Name & Surname /Full Name"
     class="px-4 py-2 rounded border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 dark:text-white">
 
-  <input id="studentInitial" type="text" required maxlength="1" placeholder="Initial"
+  <input id="studentInitial" type="text" required maxlength="1" placeholder="Student Name's First Letter here!"
     class="px-4 py-2 rounded border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 dark:text-white">
 
   <select id="studentRank" required
@@ -389,9 +440,10 @@
 
   <select id="seasonNumber" required
     class="px-4 py-2 rounded border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 dark:text-white">
-    <option value="">Season</option>
-    <option value="1">Season 1</option>
-    <option value="2">Season 2</option>
+    <option value="">Season / Sem</option>
+   
+     <option value="3">Season 3</option>
+      <option value="2">Season 4</option>
   </select>
 
   <button type="submit" class="md:col-span-4 bg-violet-600 hover:bg-violet-700 text-white font-semibold px-6 py-2 rounded transition mt-2">
@@ -479,7 +531,7 @@
 
 
 
-  <section id="RhythmSection" class="hidden bg-gradient-to-br from-purple-100 via-indigo-100 to-blue-100 dark:from-gray-800 dark:via-gray-900 dark:to-gray-800 rounded-3xl p-8 md:p-12 shadow-2xl animate-fadeIn">
+  <section id="NotificationSection" class="hidden bg-gradient-to-br from-purple-100 via-indigo-100 to-blue-100 dark:from-gray-800 dark:via-gray-900 dark:to-gray-800 rounded-3xl p-8 md:p-12 shadow-2xl animate-fadeIn">
   <button onclick="goBack()" class="mb-4 inline-flex items-center px-4 py-2 rounded-full text-sm font-medium bg-white dark:bg-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 transition">
     ← Back to Dashboard
   </button>
@@ -534,6 +586,93 @@
     }
   });
 </script>
+  </section>
+
+  
+  <section id="StaffSection" class="hidden bg-gradient-to-br from-green-100 via-teal-100 to-blue-100 dark:from-gray-800 dark:via-gray-900 dark:to-gray-800 rounded-3xl p-8 md:p-12 shadow-2xl animate-fadeIn">
+  <button onclick="goBack()" class="mb-4 inline-flex items-center px-4 py-2 rounded-full text-sm font-medium bg-white dark:bg-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 transition">
+    ← Back to Dashboard
+  </button>
+
+  <h2 class="text-3xl md:text-4xl font-bold text-center mb-6 text-gray-800 dark:text-white">T-SERVICE HQ TEAM</h2>
+  
+  <div class="overflow-x-auto mb-12">
+    <table class="min-w-full bg-white dark:bg-gray-800 rounded-xl shadow-md">
+      <thead class="bg-gradient-to-r from-indigo-200 via-purple-200 to-pink-200 dark:from-gray-700 dark:to-gray-700 text-gray-800 dark:text-white">
+        <tr>
+          <th class="py-3 px-6 text-left">Name</th>
+          <th class="py-3 px-6 text-left">Designation</th>
+        </tr>
+      </thead>
+      <tbody class="text-gray-700 dark:text-gray-200">
+        <tr class="border-b border-gray-200 dark:border-gray-700">
+          <td class="py-3 px-6">Tejas Shinde</td>
+          <td class="py-3 px-6">Head Admin</td>
+        </tr>
+        <tr class="border-b border-gray-200 dark:border-gray-700">
+          <td class="py-3 px-6">Ankita Rajput</td>
+          <td class="py-3 px-6">Super Admin</td>
+        </tr>
+        <tr class="border-b border-gray-200 dark:border-gray-700">
+          <td class="py-3 px-6">Sujal Telore</td>
+          <td class="py-3 px-6">Manager</td>
+        </tr>
+        <tr class="border-b border-gray-200 dark:border-gray-700">
+          <td class="py-3 px-6">Kritika Sonawane</td>
+          <td class="py-3 px-6">Assistant Manager</td>
+        </tr>
+        <tr>
+          <td class="py-3 px-6">Anaya Shirke</td>
+          <td class="py-3 px-6">Server Admin (SSA-1,2,3)</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <h3 class="text-2xl font-bold text-center mb-6 text-gray-800 dark:text-white">↳ Zen-Tech Team (Connected)</h3>
+  
+  <div class="overflow-x-auto mb-8">
+    <table class="min-w-full bg-white dark:bg-gray-800 rounded-xl shadow-md">
+      <thead class="bg-gradient-to-r from-pink-200 via-purple-200 to-indigo-200 dark:from-gray-700 dark:to-gray-700 text-gray-800 dark:text-white">
+        <tr>
+          <th class="py-3 px-6 text-left">Name</th>
+          <th class="py-3 px-6 text-left">Designation</th>
+        </tr>
+      </thead>
+      <tbody class="text-gray-700 dark:text-gray-200">
+        <tr class="border-b border-gray-200 dark:border-gray-700">
+          <td class="py-3 px-6">Prajakta Mane</td>
+          <td class="py-3 px-6">Operation Head</td>
+        </tr>
+        <tr class="border-b border-gray-200 dark:border-gray-700">
+          <td class="py-3 px-6">Abdullah Khan</td>
+          <td class="py-3 px-6">Manager</td>
+        </tr>
+        <tr class="border-b border-gray-200 dark:border-gray-700">
+          <td class="py-3 px-6">Ashwini Patil</td>
+          <td class="py-3 px-6">Sr. Web Developer</td>
+        </tr>
+        <tr class="border-b border-gray-200 dark:border-gray-700">
+          <td class="py-3 px-6">Ashok Tendulkar</td>
+          <td class="py-3 px-6">Jr. UI/UX Developer</td>
+        </tr>
+        <tr class="border-b border-gray-200 dark:border-gray-700">
+          <td class="py-3 px-6">Vinay Singh</td>
+          <td class="py-3 px-6">Role will be assigned soon</td>
+        </tr>
+        <tr>
+          <td class="py-3 px-6">Anoj Chavan</td>
+          <td class="py-3 px-6">Role will be assigned soon</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="bg-yellow-100 dark:bg-yellow-900 text-yellow-800 dark:text-yellow-300 text-center text-sm px-6 py-4 rounded-xl shadow-inner">
+    ⚠️ <strong>Note:</strong> T-SERVICE TEAM will be actively monitoring each and every moment of the Zen-Tech staff members. Please maintain professionalism and follow all protocols strictly.
+  </div>
+
+
   </section>
 
 </main>
